Microservice/Deployment scripts/car-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: car-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: carservice
  template:
    metadata:
      labels:
        app: carservice
    spec:
      containers:
      - name: carservice
        image: dam1591/carservice:latest
        resources:
          limits:
            memory: 512Mi
          requests:
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: cars-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: carservice
  ports:
  - name: carservice
    protocol: TCP
    port: 80
    targetPort: 80
  - name: cargrpc
    protocol: TCP
    port: 60002
    targetPort: 60002
