Microservice/Deployment scripts/carmodelnpservice-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: carmodelnpservice-srv
spec:
  type: NodePort
  selector:
    app: carmodelservice
  ports:
    - name: carmodelservice
      protocol: TCP
      port: 80
      targetPort: 80
